--- a/index.html
+++ b/index.html
@@ -7,9 +7,68 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/column.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    
+    <section class="page-head">
+        <header>
+            <div class="container row middle">
+                <img class="logo" src="imgs/Logo.svg" alt="logo">
+                <ul class="head-nav-list row">
+                    <li class="head-nav-items"><a href="#" class="head-nav-link">Home</a></li>
+                    <li class="head-nav-items"><a href="#" class="head-nav-link">Fratures</a></li>
+                    <li class="head-nav-items"><a href="#" class="head-nav-link">Service</a></li>
+                    <li class="head-nav-items"><a href="#" class="head-nav-link">Listed</a></li>
+                    <li class="head-nav-items"><a href="#" class="head-nav-link">Contact</a></li>
+                </ul>
+                <ul class="sign-list row middle">
+                    <li class="sign-items"><a href="#" class="head-sign-link">Sign up</a></li>
+                    <li class="sign-items reg"><a href="#" class="head-sign-link reg-link">Register</a></li>
+                </ul>
+            </div>
+        </header>
+        <div class="hero">
+            <div class="container row middle">
+                <div class="hero-title">
+                    <span class="welcome">Welcome to Besnik Agency</span>
+                    <h1 class="hero-h1">Discover a place
+you'll love to live.</h1>
+                    <p class="hero-parag">get the best real estate deals first,
+before they hit the mass market! HOT FORECLOSURE DEALS with one simple search</p>
+                    <a href="#" class="hero-link">More About Us</a>
+                </div>
+                <img class="hero-img" src="imgs/house.svg" alt="home" >
+            </div>
+        </div>
+    </section>
+    <section class="stat">
+        <div class="container row between ">
+            <div class="stat-imgs">
+                <img src="imgs/image.png" alt="imgs" class="rel-img">
+                <img src="imgs/card-1.svg" alt="imgs" class="abs-img">
+            </div>
+            <div class="stat-title">
+                <hr>
+                <h2 class="stat-title-h2">You’ve found a neighborhood you love.</h2>
+                <p class="stat-paragraph">When you own a home, you’re committing to living in one location for a while. In a recent Trulia survey, we found that five out of six respondents said finding the right neighborhood </p>
+            </div>
+            <ul class="stat-list row between middle">
+                <li class="stat-items"><h3 class="items-h3">2,500</h3><p class="items-parag">Homes For Sale</p></li>
+                <li class="stat-items"><h3 class="items-h3">5,000+</h3><p class="items-parag">Homes Recently Sold</p></li>
+                <li class="stat-items"><h3 class="items-h3">170+</h3><p class="items-parag">Price Reduced</p></li>
+                
+            </ul>
+        </div>
+    </section>
+    <section class="news">
+        <div class="container row">
+            <div class="news-tile">
+                <h2 class="news-h2">Featured Properties</h2>
+                <p class="news-parag">Everything you need to know when you're looking</p>
+                <a href="" class="news-link">Get Started Now</a>
+            </div>
+            <img src="imgs/phone.svg" alt="phone" class="phone-img">
+        </div>
+    </section>
 </body>
 </html>
