--- a/index.html
+++ b/index.html
@@ -70,5 +70,29 @@ before they hit the mass market! HOT FORECLOSURE DEALS with one simple search</p
             <img src="imgs/phone.svg" alt="phone" class="phone-img">
         </div>
     </section>
+    <section class="testimonal">
+        <div class="container row">
+            <div class="testim-title">
+                <img src="imgs/icon.svg" alt="reting" class="icons">
+                <h3 class="testim-h3">Customers Stories</h3>
+                <div class="profil row middle">
+                    <img class="profil-image" src="imgs/profile-memoji.svg" alt="profil-image">
+                    <div class="abouts">
+                        <h4 class="name">Justin Pierre</h4>
+                        <p class="job">Project Manager,Apple</p>
+                        <img  class="reting" src="imgs/rating.svg" alt="reting">
+                    </div>
+                </div>
+                <p class="testim-paragraph">Increased review rates have helped us grow our brands 20% year over year.Perferendis repudandae fugia rchitecto beatea rederit svitae recusa ndae debitifacere uiimi placeat maxienui</p>
+                <div class="read-more row middle">
+                    <a href="#" class="read">READ MORE</a>
+                    <img src="imgs/arrow.svg" alt="arrow" class="arrow">
+                </div>
+            </div>
+            <img class="emoji" src="imgs/emoji.png" alt="emaji">
+            <img src="imgs/Mask.svg" alt="testim-image" class="testim-img">
+            <img class="arrow-button" src="imgs/arrow-button.svg" alt=" arrow-button">
+        </div>
+    </section>
 </body>
 </html>
